# Moodle_Student_Tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SETUP.md  SETUP_GUIDE.md  bilkent-academic-ai-assistant.html  deploy.sh  docker-compose.yml  main.py  medium-article.html  moodle-bot.service  pyproject.toml  requirements-dev.txt  requirements.txt  stars  telegram_bot.py  test_agentic_rag.py  test_embedding_benchmark.py  test_rag.py  webmail
.claude/: settings.local.json
bot/: __init__.py  config.py  exceptions.py  legacy.py  logging_config.py  main.py  state.py
bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py  messages.py
bot/middleware/: __init__.py  auth.py  error_handler.py  rate_limiter.py
bot/services/: agent_service.py  conversation_memory.py  document_service.py  llm_router.py  llm_service.py  notification_service.py  rag_service.py  summary_service.py  topic_cache.py  user_service.py
bot/utils/: __init__.py  formatters.py  helpers.py  validators.py
core/: __init__.py  cache_db.py  document_processor.py  llm_engine.py  llm_providers.py  memory.py  moodle_client.py  requirements.txt  stars_client.py  sync_engine.py  vector_store.py  webmail_client.py
docs/plans/: 2026-03-05-stars-full-cache-exam-notifications.md
scripts/: deploy-remote.sh  deploy.sh  generate_summaries.py  moodle-bot.service  telegram-bot.service
tests/: __init__.py  conftest.py  debug_hybrid.py  smoke_test.py  test_e2e_scenarios.py  test_rag_quality.py  test_reading_mode.py
tests/scenarios/: __init__.py  (+2 more)
(+38 files in other folders)
