[project]
name = "telegram-rag-bot"
version = "1.0.0"
description = "Telegram tabanli RAG destekli Moodle ogrenci asistani."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
